# Rainfall_forcast_system

./: 2 - BCTT - HE THONG GIAM SAT VA DU BAO LUONG MUA CAC TINH BAC TRUNG BO.docx  CMakeLists.txt
firmware/: CMakeLists.txt
firmware/lib/inc/middleware/: font_char.h
firmware/lib/inc/system/: system_display.h
firmware/lib/src/driver/: drv_bmp180.c  drv_button.c  drv_sh1106.c
firmware/main/: CMakeLists.txt  main.c
lib/: drv_oled.c  drv_oled.h  font.h  font8x8_basic.h
lib/inc/bsp/: bsp_gpio.h  bsp_i2c.h  bsp_mqtt_tcp.h  bsp_timer.h
lib/inc/driver/: drv_button.h  drv_dht11.h  drv_sh1106.h
lib/inc/middleware/: font8x8_basic.h  font_char.h  font_image.h  middle_mqtt.h
lib/inc/system/: system_data.h  system_display.h  system_manager.h  system_oled.h
lib/src/bsp/: bsp_gpio.c  bsp_i2c.c  bsp_mqtt_tcp.c  bsp_timer.c
lib/src/driver/: drv_sh1106.c
lib/src/middleware/: font_image.c  middle_mqtt.c
lib/src/system/: system_data.c  system_display.c  system_manager.c
main/: CMakeLists.txt  main.c  middle_mqtt.c  middle_mqtt.h  mqtt.c  mqtt.h
main/mqtt_tcp/: bsp_mqtt_tcp.c  bsp_mqtt_tcp.h  mqtt_tcp.c
server/dataset/Dataset_Vrain/Hà Tĩnh/: Chi cục Thuỷ Lợi.xlsx  Kỳ Thượng.xlsx  Mỹ Lộc.xlsx
server/dataset/Dataset_Vrain/Quảng Bình/: Hồ Troóc Trâu.xlsx  Trường Xuân.xlsx  Vạn Trạch.xlsx
server/dataset/Dataset_Vrain/Quảng Trị/: Cửa Tùng.xlsx  Hướng Linh.xlsx  Triệu Ái.xlsx  ~$Quang_Tri.xlsx
server/dataset/Dataset_Vrain_IFS/: Datashet.xlsx
server/dataset/Dataset_Vrain_IFS/Compare_Historical_Forcast/: Compare_Historical_Forcast.xlsx  Forcast_Default_MyLoc.csv  Historical-MyLoc.csv  Historical_BestMatch_MyLoc.csv  compare_10_2024.xlsx
server/dataset/Dataset_Vrain_IFS/Hà Tĩnh/: Vrain_Ha_Tinh.xlsx
server/dataset/Dataset_Vrain_IFS/Hà Tĩnh/Chi cục Thuỷ Lợi/: So sánh - Hà Tĩnh - Chi cục Thuỷ Lợi.xlsx
server/dataset/Dataset_Vrain_IFS/Hà Tĩnh/Google_Earth/: HaTinh_Vrain_Historical_Forcast.kml  Ha_Tinh_Forcast.kml  OpenMeteo_Ha_Tinh.kml  Vrain_Ha_Tinh.kml
server/dataset/Dataset_Vrain_IFS/Hà Tĩnh/Kỳ Thượng/: So sánh - Hà Tĩnh - Kỳ Thượng.xlsx
server/dataset/Dataset_Vrain_IFS/Hà Tĩnh/Mỹ Lộc/: So sánh - Hà Tĩnh - Mỹ Lộc.xlsx
server/dataset/Dataset_Vrain_IFS/Quảng Bình/: Vrain_Quang_Binh.xlsx
server/dataset/Dataset_Vrain_IFS/Quảng Bình/Google_Earth/: OpenMeteo_QuangBinh.kml  QuangBinh_Vrain_Historical_Forcast.kml  Vrain_Quang_Binh.kml
server/dataset/Dataset_Vrain_IFS/Quảng Bình/Hồ Troóc Trâu/: So sánh - Quảng Bình - Hồ Troóc Trâu.xlsx
server/dataset/Dataset_Vrain_IFS/Quảng Bình/Trường Xuân/: So sánh - Quảng Bình - Trường Xuân.xlsx
server/dataset/Dataset_Vrain_IFS/Quảng Bình/Vạn Trạch/: So sánh - Quảng Bình - Vạn Trạch.xlsx
server/dataset/Dataset_Vrain_IFS/Quảng Trị/: Vrain_Quang_Tri.xlsx
server/dataset/Dataset_Vrain_IFS/Quảng Trị/Cửa Tùng/: So sánh - Quảng Trị - Cửa Tùng.xlsx
server/dataset/Dataset_Vrain_IFS/Quảng Trị/Google_Earth_Kml_files/: Open_Meteo_Quang_tri.kml  QuangTri_Vrain_Historical_Forcast.kml  Quang_Tri_Forcast.kml  (+1 more)
(+377 files in other folders)
